# ems_tools

./: .gitignore  README.md  REFACTOR_SUMMARY.md  index.html  package-lock.json  package.json  test-persistence.html  vite.config.ts
src/: App.vue  index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_transfer.rs  logger.rs  main.rs  network.rs  service.rs  ssh.rs
src/router/: index.ts
src/stores/: logs.ts  ssh.ts  terminal.ts
src/styles/: index.css
src/views/: Layout.vue
src/views/FileTransfer/: index.vue
src/views/Logs/: index.vue
src/views/Network/: index.vue
src/views/SSH/: index.vue
src/views/Services/: index.vue
src/views/Terminal/: index.vue
